<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".presentation.ui.fragments.main.settings.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                tools:text="@string/app_version"/>

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#999999"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/things_i_have_to_say_russian"/>



            <Button
                android:id="@+id/rate_the_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="36dp"
                android:text="@string/rate_the_app"
                android:textAlignment="textStart"
                android:textColor="@color/blue"
                android:textSize="14sp"
                app:iconPadding="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"/>


            <View
                android:id="@+id/divider_3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#999999"
                android:layout_marginStart="8dp"/>

            <Button
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="36dp"
                android:text="@string/feedback"
                android:textAlignment="textStart"
                android:textColor="@color/blue"
                android:textSize="14sp"
                app:iconPadding="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <View
                android:id="@+id/divider_4"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#999999"
                android:layout_marginStart="8dp"/>

            <Button
                android:id="@+id/share_to_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="36dp"
                android:text="@string/share_to_friends"
                android:textAlignment="textStart"
                android:textColor="@color/blue"
                android:textSize="14sp"
                app:iconPadding="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


        </LinearLayout>


    </LinearLayout>


</FrameLayout>