<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".presentation.ui.fragments.details.DetailsFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">


            <LinearLayout
                android:id="@+id/back_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_left"
                    android:minWidth="36dp"
                    android:minHeight="36dp"/>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp"
                    />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_word"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"/>

                        <TextView
                            android:id="@+id/tv_transcription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            tools:text="@string/app_version"/>

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/image_play_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:padding="8dp"
                        android:src="@drawable/icon_play_circle"
                        android:background="?attr/selectableItemBackgroundBorderless"/>
                    <!--<ImageButton
                        android:id="@+id/remove_saved"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:padding="8dp"
                        android:src="@drawable/icon_cross"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:tint="@color/black"-->

                </LinearLayout>





                <View
                    android:id="@+id/divider_1"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#999999"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textIsSelectable="true"
                    android:text="@string/things_i_have_to_say_russian"/>



            </LinearLayout>


        </LinearLayout>
    </LinearLayout>





</FrameLayout>